[package]
name = "crab-shell"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"
rustyline = "10.0.0"
lalrpop-util = {version = "0.19.8", features = ["lexer"]}
regex = "1.6.0"

[build-dependencies]
lalrpop = "0.19.8"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
